# ELECTRO_BRAIN

./: CMakeLists.txt  CONF  DEITIES  ELECTRO_BRAIN  ELECTRO_BRAIN.cpp  ELECTRO_BRAIN.h.in  RES.txt  TFILTER.h  TNET.h  TSAMPLE.h  Teolog  WYN.txt  readme.md  readme.txt  todo.txt
headers/: CMakeLists.txt  SOURCE.cpp  TCONF.h  TFILTER.cpp  TFILTER.h  TNET.cpp  TNET.h  TSAMPLE.cpp  TSAMPLE.h
